--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="carousel-item active" style="background: url(assets/img/donuts/bgm-img.jpg); background-repeat: no-repeat; background-size: cover;" class="img">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown" style="font-family: 'Satisfy', sans-serif;"><span>Donet</span> Queen</h2>
+                <h2 class="animate__animated animate__fadeInDown" style="font-family: 'Satisfy', sans-serif;"><span>Donets</span> Queen</h2>
                 <p class="animate__animated animate__fadeInUp">We do donuts and donuts holls and yes, we do Beignets too!  Every morning our baristas and bakers fill our kitchen with fragrance that carries our signature right to the door of your favorite joint - a perfect private getaway for you and your friends right in the middle of city hustle.  Or, ask us for our catering services.</p>
                 <div>
                   <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a>
@@ -185,7 +185,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
 
             <div class="content">
-              <h3>Eum ipsam laborum deleniti <strong>velit pariatur architecto aut nihil</strong></h3>
+              <h3>The world’s favorite <strong>donut</strong> brand now exclusively for you.</h3>
               <p>
                 Our “dream” was to bring the taste and aroma of slow-brewed donuts prepared from well-roasted globally sourced beans to donut lovers in quiet settings.”
               </p>
@@ -212,7 +212,7 @@
 
         <div class="section-title" >
           <h2 >Our <span>Home Delivery</span> Partner</h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>You may be far.  Breakfast, Lunch or Dinner, we are yet close to you</p>
         </div>
 
           <div class="row category">
@@ -631,7 +631,7 @@
         </div>
        
 
-       <a href="opencart.html"><button id="btn">For More</button></a>
+       <a href="opencart.html"><button id="btn" style="position:fixed;">For More</button></a>
       </div>
     </section><!-- End Menu Section -->
 
@@ -806,7 +806,7 @@
 
         <div class="section-title">
           <h2><span>Contact</span> Us</h2>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <!---<p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>-->
         </div>
       </div>
 
@@ -881,7 +881,7 @@
   <footer id="footer">
     <div class="container">
       <h3>Donets Queen</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>The secrets of a century</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
