--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
         </div>
        
 
-       <a href="opencart.html"><button id="btn" style="position:fixed;">For More</button></a>
+       <a href="opencart.html"><button id="btn" >For More</button></a>
       </div>
     </section><!-- End Menu Section -->
 
