--- a/orders.html
+++ b/orders.html
@@ -182,9 +182,9 @@
                 <div class="col-5">
                     <img src="assets/img/donuts/deliveroo.jpg" alt="">
                 </div>
-                <div class="col-5">
+                <!--<div class="col-5">
                     <img src="assets/img/donuts/zomato.jpg" alt="">
-                </div>
+                </div>-->
                </div>
            </div>
        </div>
