--- a/account.html
+++ b/account.html
@@ -30,7 +30,7 @@
                <ul id="menuitems">
                    <li><a href="index.html">Home</a></li>
                    <li><a href="orders.html">Products</a></li>
-                   <li><a href="">Contact</a></li>
+                   <li><a href="index.html">Contact</a></li>
                    <li><a href="account.html">Account</a></li>
                    
                </ul>
