--- a/opencart.html
+++ b/opencart.html
@@ -12,6 +12,9 @@
 
   <!-- StyleSheet -->
   <link rel="stylesheet" href="assets/css/opencart.css" />
+  <link href="assets/img/donuts/logo.JPG" rel="icon">
+   
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <title>Shopping Cart Project</title>
 </head>
 
@@ -24,8 +27,8 @@
       </div>-->
 
       <ul class="nav__list">
-         <li><a href="index.html">Donut&nbsp; </a></li>
-         <li><a href="index.html"> Queen&nbsp;&nbsp;</a></li>
+         <li><a href="index.html" title="home">Donut&nbsp; </a></li>
+         <li><a href="index.html" title="home">Queen&nbsp;&nbsp;</a></li>
 
         <div class="cart__icon" id="cart">
           <h2>cart</h2>
@@ -42,10 +45,10 @@
     </div>
   </nav>
   <!-- Navigation -->
-
   <!-- Products -->
   <section class="products">
     <div class="product__center">
+    
     </div>
   </section>
 
@@ -69,6 +72,23 @@
       </div>
     </div>
   </section>
+  <footer id="footer">
+    <div class="container">
+      <h3>Donets Queen</h3>
+      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        &copy; Copyright <strong><span>Donuts Queen</span></strong>. All Rights Reserved
+      </div>
+      
+    </div>
+  </footer>
 
   <script src="assets/js/cart.js"></script>
 </body>
