--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           
           <li><a href="account.html">Account</a></li>
           <li  class="book-a-table text-center" id="onlineorders"><a href="orders.html">Online Orders</a></li>
-          <li id="onlineorders"><a href="opencart.html" ><i class="fa fa-shopping-cart" style="font-weight: 400;font-size: 25px;" ></i></a></li>
+          <li id="onlineorder"><a href="opencart.html" ><i class="fa fa-shopping-cart" style="font-weight: 400;font-size: 25px;" ></i></a></li>
 
 
         </ul>
